# emergency_ai

./: .dockerignore  .gitignore  Copy_of_Sample_voice_auto_filler.ipynb  Dockerfile  FIND_RENDER_URL.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PROFILE_PIC_AND_TIMESTAMP_FIXES.md  QUICK_REFERENCE_AUTH.md  QUICK_START_SESSIONS.md  README.md  RENDER_DEPLOY.md  Untitled.ipynb  api.py  api_backup.py  emergency_ai.db  main.py  pyproject.toml  render.yaml  requirements.txt  requirements_fixed.txt  tes_account_data.py  test_render_correct.py  test_render_with_url.py  transcribe.py  z_old_api.py
.instructions/: ROADMAP_FOR_OPTIMIZATION.md
.ipynb_checkpoints/: Copy_of_Sample_voice_auto_filler-checkpoint.ipynb  Untitled-checkpoint.ipynb
.template/: Paramedic Patient Care Report.docx
ai_model/: __init__.py  analysis.py  openai_client.py  prompts.py  transcription.py  utils.py
database/: __init__.py  add_indexes.py  auth.py  connection.py  models.py  schemas.py
endpoints/: __init__.py  auth_routes.py  config.py  pdf_generator.py  routes.py  user_routes.py
misc-script/: migrate_profile_pictures.py
output/: 24e3d51d_20251002153915_analysis.json  24e3d51d_20251002153915_report.txt  752b7035_20251002153933_analysis.json  752b7035_20251002153933_report.txt  752b7035_20251002153933_transcript.txt  752b7035_20251003133858_report.txt  752b7035_20251003134312_analysis.json  752b7035_20251003134312_report.txt  752b7035_20251003143700_analysis.json  752b7035_20251003143700_report.txt  752b7035_20251003143700_transcript.txt  752b7035_20251003153722_analysis.json  (+34 more)
(+32 files in other folders)
