[project]
name = "emergency-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.1",
    "openai>=2.2.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "uvicorn>=0.37.0",
    "weasyprint>=66.0",
]
